# suncatcher

./: .gitignore  .gitmodules  .ycm_extra_conf.py  AUTHORS  BUILD  CMakeLists.txt  COPYING  Coord.h  DeltaMap.cc  DeltaMap.h  Door.h  Doxyfile  DynamicDisjointSets-inl.h  DynamicDisjointSets.h  Grid-inl.h  Grid.h  Grid.tcc  LICENSE  Makefile  Map-inl.h  Map.cc  Map.h  MapBuilder.cc  MapBuilder.h  MapMutator.cc  MapMutator.h  Path.h  README.rst  UnionFind-inl.h  UnionFind.h  build.bat  build.sh  debug.sh  door_torture.cc  huge_map.txt  map.txt  pathfinder.cc  pathfinder.h  pathfinder_repl.cc  platform.h  (+4 more)
include/: suncatcher.hh
include/suncatcher/: Coord.hh  CoordRange-inl.hh  CoordRange.hh  Door.hh  EuclideanGraph.hh  GraphDelegate-inl.hh  GraphDelegate.hh  Map-inl.hh  Map.h  Map.hh  MapBuilder.h  MapBuilder.hh  MapImpl-inl.hh  MapImpl.hh  MapMutator.h  MapMutator.hh  MapView-inl.hh  MapView.hh  Path.h  Path.hh  PathStateDelegate-inl.hh  PathStateDelegate.hh  PatherStateInterface.hh  platform.hh  suncatcher.h  suncatcher.hh
include/suncatcher/graph/: CowGrid-inl.hh  CowGrid.hh  EuclideanCoord.hh  EuclideanCoordRange-inl.hh  EuclideanCoordRange.hh  EuclideanGraph-inl.hh  EuclideanGraph.hh  EuclideanGraphBuilder.hh  EuclideanPatherState-inl.hh  EuclideanPatherState.hh  GraphDomainInterface.hh  GraphInterface.hh  PatherStateInterface.hh  PolymorphicEuclideanGraph.hh  PolymorphicEuclideanGraphDomain.hh  PolymorphicEuclideanStateInterface-inl.hh  PolymorphicEuclideanStateInterface.hh
include/suncatcher/micropather/: MicropatherGraph.h  MicropatherGraph.hh  micropather.hh
include/suncatcher/test/: DeltaMap.h  DeltaMap.hh  MPWrapper.h  MPWrapper.hh  ResourceManager.h  ResourceManager.hh  common.h  common.hh
include/suncatcher/util/: DynamicDisjointSets-inl.h  DynamicDisjointSets-inl.hh  DynamicDisjointSets.h  DynamicDisjointSets.hh  Grid-inl.hh  Grid.h  Grid.hh  UnionFind-inl.h  UnionFind-inl.hh  UnionFind.h  UnionFind.hh  util.hh
maps/: checkerdoor.txt  checkerdoor64.txt  cross.txt  cube3.txt  cube5.txt  doorland.txt  doorland64.txt  giant_maze.txt  hardernine.txt  hardnine.txt  huge_map.txt  map.txt  map4.txt  micro.txt  octants.txt  open.txt  small_maze.txt  small_open.txt  tiny_doorland.txt
micropather/: MicropatherGraph.h  micropather.cc  micropather.cpp  micropather.h
src/: EuclideanGraph.cc  Map.cc  Map.cpp  MapBuilder.cc  MapBuilder.cpp  MapImpl.cc  MapMutator.cc  MapMutator.cpp  MapView.cc
src/graph/: EuclideanGraph.cc  EuclideanGraphBuilder.cc  PolymorphicEuclideanGraph.cc  PolymorphicEuclideanGraphDomain.cc
src/test/: DeltaMap.cc  DeltaMap.cpp  MPWrapper.cc  MPWrapper.cpp  ResourceManager.cc  ResourceManager.cpp  common.cc  common.cpp
src/test/micropather/: micropather.cc  micropather.cpp
src/tool/: door_torture.cc  repl.cc
test/: runner.cc  test_fuzzystress.cc  test_grid.cc  test_layers.cc  test_pathfinder_mutation.cc  test_pathfinder_mutation.cpp  test_pathfinder_optimized_mutation.cc  test_pathfinder_static.cc  test_pathfinder_static.cpp
tests/: DeltaMap.cc  DeltaMap.h  MPWrapper.cc  MPWrapper.h  ResourceManager.cc  ResourceManager.h  test_pathfinder.cc  test_pathfinder_common.cc  test_pathfinder_common.h  test_pathfinder_mutation.cc  test_pathfinder_static.cc
